VacationPlanningApplication/force-app/main/default/objects/Vacation_Planning_and_Expense__c/Vacation_Planning_and_Expense__c.object-meta.xml
<CustomObject>
    <description>It will consist of record types to differentiate between various expenses and line items and consist of different pagelayouts as per recordtypes. It will be child of vacation object.</description>
    <label>Vacation Planning and Expense</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vacation Planning and Expenses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>