VacationPlanningApplication/force-app/main/default/objects/Vacation_Planning_and_Expense__c/fields/Check_in__c.field-meta.xml
<CustomField>
    <fullName>Check_in__c</fullName>
    <description>Check-in date and time for hotel</description>
    <label>Check-in</label>
    <type>DateTime</type>
</CustomField>