VacationPlanningApplication/force-app/main/default/objects/Vacation_Planning_and_Expense__c/fields/Departs_from__c.field-meta.xml
<CustomField>
    <fullName>Departs_from__c</fullName>
    <label>Departs from</label>
    <type>TextArea</type>
</CustomField>