VacationPlanningApplication/force-app/main/default/objects/Vacation_Planning_and_Expense__c/fields/Drop_off__c.field-meta.xml
<CustomField>
    <fullName>Drop_off__c</fullName>
    <label>Drop-off</label>
    <type>DateTime</type>
</CustomField>