VacationPlanningApplication/force-app/main/default/objects/Vacation_Planning_and_Expense__c/fields/Drop_off_Address__c.field-meta.xml
<CustomField>
    <fullName>Drop_off_Address__c</fullName>
    <label>Drop-off Address</label>
    <type>TextArea</type>
</CustomField>