VacationPlanningApplication/force-app/main/default/objects/Vacation_Planning_and_Expense__c/fields/Pick_up__c.field-meta.xml
<CustomField>
    <fullName>Pick_up__c</fullName>
    <label>Pick-up</label>
    <type>DateTime</type>
</CustomField>