VacationPlanningApplication/force-app/main/default/objects/Vacation_Planning_and_Expense__c/fields/Pick_up_Address__c.field-meta.xml
<CustomField>
    <fullName>Pick_up_Address__c</fullName>
    <label>Pick-up Address</label>
    <type>TextArea</type>
</CustomField>