VacationPlanningApplication/force-app/main/default/objects/Vacation_Planning_and_Expense__c/fields/Vacation__c.field-meta.xml
<CustomField>
    <fullName>Vacation__c</fullName>
    <description>Master Detail Relationship for pointing to a particular vacation.</description>
    <label>Vacation</label>
    <referenceTo>Vacation__c</referenceTo>
    <relationshipLabel>Vacation Planning and Expenses</relationshipLabel>
    <relationshipName>Vacation_Planning_and_Expenses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>