VacationPlanningApplication/force-app/main/default/objects/Vacation_Planning_and_Expense__c/recordTypes/Gas.recordType-meta.xml
<RecordType>
    <fullName>Gas</fullName>
    <active>true</active>
    <description>Gas related information</description>
    <label>Gas</label>
</RecordType>