VacationPlanningApplication/force-app/main/default/objects/Vacation_Planning_and_Expense__c/recordTypes/Meal.recordType-meta.xml
<RecordType>
    <fullName>Meal</fullName>
    <active>true</active>
    <description>Meal related information</description>
    <label>Meal</label>
</RecordType>