VacationPlanningApplication/force-app/main/default/objects/Vacation_Planning_and_Expense__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Fare__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>